--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-color: #fefefe;
+  background-color: red;
   font-family: sans-serif;
 }
 
@@ -22,7 +22,7 @@ body {
 }
 
 .logo {
-  width: px;
+  width: 24px;
   height: 24px;
 }
 
