--- a/style.css
+++ b/style.css
@@ -93,3 +93,19 @@ body {
 
   border-radius: 16px;
 }
+
+
+
+.skill-img{
+width: 124px;
+height: 124px;
+}
+.skill-card{
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  width: 300px;
+  justify-content: center;
+   align-items: center;
+}
+
