--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
 
 
 .header {
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -22,8 +23,8 @@ body {
 }
 
 .logo {
-  width: 24px;
-  height: 24px;
+  width: 40px;
+  height: 40px;
 }
 
 .btn {
@@ -109,3 +110,42 @@ height: 124px;
    align-items: center;
 }
 
+.nav {
+  display: none;
+  margin-top: 20px;
+
+  flex-direction: column;
+  gap: 16px;
+
+  padding: 16px;
+
+  background-color: white;
+
+
+  position: absolute ;
+
+  right: 16px;
+  top: 35px;
+  border-radius: 16px;
+  box-shadow: 1px 4px 5px 0px #757575;
+
+
+
+
+}
+
+.nav a {
+  color: #2D2D2D;
+  text-decoration: none;
+}
+
+.nav ul {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+.nav.active {
+  display: flex;
+
+}
