--- a/style.css
+++ b/style.css
@@ -10,21 +10,19 @@ body {
 }
 
 .container {
-  box-shadow: 1px 4px 5px 0px #757575;
   position: sticky;
   top: 0;
   width: 100%;
   background-color: white;
 }
 .header {
- 
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 16px;
   height: 54px;
   width: 100%;
-  
+
   max-width: 1200px;
   margin: 0 auto;
 }
@@ -33,7 +31,6 @@ body {
   width: 40px;
   height: 40px;
 }
-
 
 .btn {
   padding: 12px;
@@ -69,6 +66,7 @@ body {
 }
 
 .info {
+  max-width: 557px;
   color: #2d2d2d;
 
   display: flex;
@@ -144,26 +142,32 @@ body {
   display: none;
 }
 .skill-container {
-  display: grid ;
-  grid-template-columns: 1fr  ; 
-  gap: .5rem; 
-  
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 0.5rem;
 }
 
+.hero {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 2rem 0;
+  width: 100%;
 
-
+  margin: 0 auto;
+}
 /* 768px: From here we start with the desktop version */
 @media (min-width: 768px) {
+  .hero {
+    flex-direction: row;
+  }
   .skill-container {
-   
-    grid-template-columns: 1fr 1fr  ; 
-   
-    
+    grid-template-columns: 1fr 1fr 1fr;
   }
   .btn {
     display: none;
-   
-
   }
 
   .desktopNav {
