--- a/style.css
+++ b/style.css
@@ -93,8 +93,10 @@ body {
 }
 
 .skill-img {
-  width: 124px;
-  height: 124px;
+  width: 80px;
+  height: 80px;
+  max-height: 80px;
+  min-height: 80px;
 }
 .skill-card {
   display: flex;
@@ -103,7 +105,12 @@ body {
   width: 300px;
   justify-content: center;
   align-items: center;
+  text-align: center;
 }
+
+/* .skill-card p {
+  height: 100px ;
+} */
 
 .nav {
   display: none;
